[gd_scene load_steps=10 format=3 uid="uid://bdx4401b1mqvg"]

[ext_resource type="PackedScene" uid="uid://cok1b0bpa6qkf" path="res://Cenas/player.tscn" id="1_0y4mq"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_qjgd8"]
[ext_resource type="Texture2D" uid="uid://bdf00lnpud31p" path="res://Assets/wallpaperfreeway.png" id="1_wdasw"]
[ext_resource type="PackedScene" uid="uid://r6nksijrhno5" path="res://Cenas/linha_chegada.tscn" id="2_abdla"]
[ext_resource type="AudioStream" uid="uid://cc5761c3627bf" path="res://Assets/sons/tema.wav" id="4_1ri28"]
[ext_resource type="PackedScene" uid="uid://cgetjotlv68li" path="res://Cenas/hud.tscn" id="4_6k5k2"]
[ext_resource type="AudioStream" uid="uid://2qp884dwn5io" path="res://Assets/sons/ponto.wav" id="5_lsgcb"]
[ext_resource type="AudioStream" uid="uid://doqpwtq2y2sj" path="res://Assets/sons/ganhou.wav" id="6_pk85o"]
[ext_resource type="FontFile" uid="uid://176a8vnfyoxm" path="res://Assets/PressStart2P-Regular.ttf" id="9_5mbdw"]

[node name="Main" type="Node"]
script = ExtResource("1_qjgd8")
pontuacao_maxima = 5
tempo_maximo = 136

[node name="Pista" type="Sprite2D" parent="."]
texture = ExtResource("1_wdasw")
centered = false

[node name="Player" parent="." instance=ExtResource("1_0y4mq")]
position = Vector2(640, 690)

[node name="LinhaChegada" parent="." instance=ExtResource("2_abdla")]
position = Vector2(640, 64)

[node name="TimerCarrosRapidos" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLentos" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1ri28")

[node name="AudioPonto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lsgcb")

[node name="AudioVitoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pk85o")

[node name="HUD" parent="." instance=ExtResource("4_6k5k2")]

[node name="TimerGameOver" type="Timer" parent="."]
autostart = true

[node name="LabelTimer" type="Label" parent="."]
offset_right = 118.0
offset_bottom = 45.0
text = "Timer: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPlacar" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 10.0
offset_right = 17.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("9_5mbdw")
theme_override_font_sizes/font_size = 32
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="morre" from="Player" to="." method="_on_player_morre"]
[connection signal="pontua" from="Player" to="." method="_on_player_pontua"]
[connection signal="timeout" from="TimerCarrosRapidos" to="." method="_on_timer_carros_rapidos_timeout"]
[connection signal="timeout" from="TimerCarrosLentos" to="." method="_on_timer_carros_lentos_timeout"]
[connection signal="reinicia" from="HUD" to="." method="_on_hud_reinicia"]
[connection signal="timeout" from="TimerGameOver" to="." method="_on_timer_game_over_timeout"]
